[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project]
name = "ephem-cli"
dynamic = ["version"]
description = "A minimal and configurable astrology CLI"
readme = "README.md"
requires-python = ">=3.0"
dependencies = [
    "pyswisseph",
		"pyyaml",
    "rich",
    "tomli_w"
]
authors = [
    {name = "sailorfe", email = "sailorf@proton.me"}
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["astrology", "horoscope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Religion",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Religion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
ephem = "ephem.cli:main"

[project.urls]
Repository = "https://codeberg.org/sailorfe/ephem"
